2007-10-21  Matthias Klose  <doko@ubuntu.com>

	Import GNU Classpath (classpath-0_96_1-release).

	* Regenerate class and header files.
	* Regenerate auto* files.

	* gnu/classpath/jdwp/VMVirtualMachine.java,
	java/security/VMSecureRandom.java: Merge from classpath.

	* HACKING: Fix typo.

2007-10-18  David Daney  <ddaney@avtrex.com>

	* classpath/lib/gnu/java/locale/LocaleData.class: Regenerate
	* classpath/lib/gnu/javax/sound/sampled/gstreamer: Add generated
	files.
	* gnu/javax/sound/sampled/gstreamer: Add generated files.
	
2007-10-15  Maciej W. Rozycki  <macro@linux-mips.org>

	* configure: Regenerate following changes to ../config/tls.m4.

2007-09-17  Tom Tromey  <tromey@redhat.com>

	* defineclass.cc (MAJOR_1_6): New define.
	(MINOR_1_6): Likewise.
	(_Jv_ClassReader::parse): Handle 1.6 bytecode.

2007-09-12  David Daney  <ddaney@avtrex.com>

	* configure.host: Enable interpreter for mips64.  Enable hash
	synchronization for all mips*-*-linux* targets.
	* sysdep/mips/locks.h (compare_and_swap, compare_and_swap_release) Use
	__sync_bool_compare_and_swap instead of in-line asm.
	(release_set, read_barrier, write_barrier): Use __sync_synchronize
	instead of in-line asm.

2007-09-09  Andreas Tobler  <a.tobler@schweiz.org>

	PR libgcj/33326
	* testsuite/lib/libjava.exp (libjava_arguments): Append the test spec
	only for linux targets.

2007-09-09  Andrew Haley  <aph@redhat.com>

	* interpret-run.cc (invokevirtual_resolved): Nullcheck object on
	TOS.

2007-09-06  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.lang/StackTrace2.jar: Rebuilt.
	* testsuite/libjava.lang/StackTrace2.java (checkLine): Print file
	name.

2007-09-06  Roman Zippel  <zippel@linux-m68k.org>

	* sysdep/m68k/locks.h: New file.
	* configure.host: Set sysdeps_dir and libgcj_interpreter for m68k.
	* configure.ac: Set SIGNAL_HANDLER for m68*-*-linux*.
	* configure: Regenerate.

2007-09-05  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* configure.host(gnu*): Set use_libgcj_bc to yes.
