@@ -1,5 +1,11 @@
 2007-10-21  Matthias Klose  <doko@ubuntu.com>
 
+	* gcj/javaprims.h: Define jobjectRefType.
+	* jni.cc (_Jv_JNI_GetObjectRefType): New (stub only).
+	(_Jv_JNIFunctions): Initialize GetObjectRefType.
+
+2007-10-21  Matthias Klose  <doko@ubuntu.com>
+
 	Import GNU Classpath (classpath-0_96_1-release).
 
 	* Regenerate class and header files.
